--- a/frontend/src/Components/Register/Register.css
+++ b/frontend/src/Components/Register/Register.css
@@ -25,7 +25,7 @@
 .form-container h2 {
   font-size: 30px;
   margin-bottom: 25px;
-  color: white;
+  color: rgb(0, 0, 0);
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 3px;
