--- a/frontend/src/Pages/Home/Home.css
+++ b/frontend/src/Pages/Home/Home.css
@@ -1,10 +1,17 @@
-.container{
+.container {
     background: white;
     padding-left: 17%;
     padding-right: 2%;
     padding-top: 20px;
     padding-bottom: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px; /* space between boxes */
 }
-.large-container{
-    padding-left: 7%;
+
+.large-container {
+    padding-left: 5%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
 }
